# voice_vid

./: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/: extract-frame.sh
tests/: __init__.py  test_voice_vid.py
tests/__snapshots__/: test_voice_vid.ambr
tests/data/: __init__.py  expected-output.srt  raw-transcript.jsonl
tests/data/fragmented/: timeline.xml
tests/data/simple/: expected-output.srt  index.toml  reconciled.jsonl
tests/data/simple/recording-log/: talon-log.jsonl
tests/data/version_0/: reconciled.jsonl  timeline.xml
voice_vid/: __init__.py  calculate_mark_highlights_timing.py  cli.py  compute_command_ranges.py  deep_merge.py  generate_mark_highlights_timeline.py  generate_subtitles.py  generate_transcript.py  itertools.py  main.py  parse_config.py  parse_transcript.py  reconcile_commands.py  reconcile_transcript.py  sbt.py
voice_vid/io/: output_transcript.py  parse_config.py  parse_transcript.py  reconciled_commands.py  sbt.py
