[tool.poetry]
name = "voice_vid"
version = "0.1.0"
description = "Automatically generate transcripts and subtitles for voice coding videos."
authors = ["Pokey Rule <755842+pokey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
voice-vid = "voice_vid.main:run"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.4.0" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
