[tool.poetry]
name = "voice_vid"
version = "0.1.1"
description = "Automatically generate transcripts and subtitles for voice coding videos."
authors = ["Pokey Rule <755842+pokey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
voice-vid = "voice_vid.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = { extras = ["all"], version = "^0.4.0" }
OpenTimelineIO = { git = "git@github.com:pokey/OpenTimelineIO.git", branch = "main", python = ">=3.10,<3.11" }
PySide2 = "^5.15.2"
toml = "^0.10.2"
giturlparse = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
jupyter = "^1.0.0"
rich = { extras = ["jupyter"], version = "^11.2.0" }
syrupy = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
